# stirlitz

./: CMakeLists.txt  README.md  README_RU.md  ru.mail.bobilev_yury.Stirlitz.desktop
include/: CMakeLists.txt  CreateProfileWindow.h  ElidedLabel.h  FileTabWidget.h  KeySetWindow.h  MainWindow.h  NonCloseMsg.h  SimpleFileEncryptionTab.h  TextTabWidget.h
qm/: Stirlitz_ru.qm
src/: CMakeLists.txt  CreateProfileWindow.cpp  ElidedLabel.cpp  FileTabWidget.cpp  KeySetWindow.cpp  MainWindow.cpp  NonCloseMsg.cpp  SimpleFileEncryptionTab.cpp  TextTabWidget.cpp  main.cpp
stirlitz/: CMakeLists.txt  stirlitzConfig.cmake.in
stirlitz/include/: CMakeLists.txt  Stirlitz.h
stirlitz/src/: CMakeLists.txt  Stirlitz.cpp
translations/: Stirlitz_ru.ts
